--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -90,6 +90,10 @@
             flex-direction: column;
             
         }
+
+        .mt-2 {
+            margin-top: 4em;
+        }
     }
 
     .contatoContent {
