--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,15 @@
 
     font-family: "Poppins", sans-serif;
 }
+
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background: transparent;
+}
